--- a/wiki/de/TechDraw_Quadrants.html
+++ b/wiki/de/TechDraw_Quadrants.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw Quadrants/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+Quadrants&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../TechDraw_Quadrants.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw Quadrants (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/TechDraw_Quadrants.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw Sommets quadrants (69% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/TechDraw_Quadrants.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw: Quadranti (69% translated)" lang="it" dir="ltr">italiano</a></li>
@@ -79,11 +79,8 @@
 </p>
 <h2><span class="mw-headline" id="Skripten">Skripten</span></h2>
 <p>Siehe auch: <a rel="nofollow" class="external text" href="https://freecad.github.io/SourceDoc/">Autogenerierte API-Dokumentation</a> und <a href="../de/FreeCAD_Scripting_Basics.html" title="FreeCAD Scripting Basics/de">Grundlagen der Skripterstellung in FreeCAD</a>.
+</p><p>Kosmetische Knoten sind zur Zeit nicht &uuml;ber <a href="../de/Macros.html" title="Macros/de">Makros</a> oder die <a href="../de/Python_Console.html" title="Python Console/de">Python-Konsole</a> zug&auml;nglich. Dieser Schnipsel entfernt alle Kosmetischen Knoten aus der Ansicht.
 </p>
-<div class="mw-translate-fuzzy">
-<p>Kosmetische Knoten sind zur Zeit nicht &uuml;ber <a href="../de/Macros.html" title="Macros/de">Makros</a> oder die <a href="../de/Python.html" title="Python/de">Python</a> Konsole zug&auml;nglich.  Dieser Schnipsel entfernt alle Kosmetische Knoten aus der Ansicht.
-</p>
-</div>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">v</span> <span class="o">=</span> <span class="n">App</span><span class="o">.</span><span class="n">ActiveDocument</span><span class="o">.</span><span class="n">View</span>
 <span class="n">v</span><span class="o">.</span><span class="n">clearCV</span><span class="p">()</span>
 <span class="n">App</span><span class="o">.</span><span class="n">ActiveDocument</span><span class="o">.</span><span class="n">recompute</span><span class="p">()</span>
@@ -132,35 +129,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111205804
+Cached time: 20260111210003
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.087 seconds
-Real time usage: 0.219 seconds
-Preprocessor visited node count: 333/1000000
+CPU time usage: 0.124 seconds
+Real time usage: 0.413 seconds
+Preprocessor visited node count: 332/1000000
 Post&#8208;expand include size: 27811/2097152 bytes
 Template argument size: 11029/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2239/5000000 bytes
+Unstrip post&#8208;expand size: 2243/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   64.758      1 -total
- 31.25%   20.238      1 Template:TechDraw_Tools_navi/de
- 20.84%   13.495      1 Template:Userdocnavi/de
- 18.20%   11.783      2 Template:Navigation_menu_2
- 10.96%    7.098      2 Template:Docnav/de
-  9.87%    6.392      1 Template:GuiCommand/de
-  6.08%    3.937      1 Template:Code
-  4.80%    3.108      1 Template:Version/de
-  4.55%    2.949      1 Template:Caption
-  3.76%    2.437      1 Template:MenuCommand
+100.00%   70.537      1 -total
+ 34.62%   24.418      1 Template:TechDraw_Tools_navi/de
+ 18.07%   12.747      2 Template:Navigation_menu_2
+ 12.51%    8.825      1 Template:GuiCommand/de
+ 11.89%    8.389      1 Template:Userdocnavi/de
+  8.76%    6.177      1 Template:Button
+  6.69%    4.718      1 Template:Version/de
+  5.76%    4.061      2 Template:Docnav/de
+  5.39%    3.804      1 Template:KEY
+  4.54%    3.202      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177745-0!canonical and timestamp 20260111205804 and revision id 1736221. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177745-0!canonical and timestamp 20260111210003 and revision id 1736248. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
