--- a/wiki/de/TechDraw_Workbench.html
+++ b/wiki/de/TechDraw_Workbench.html
@@ -60,10 +60,10 @@
 </p>
 <h4><span class="mw-headline" id="TechDraw-Ansichten">TechDraw-Ansichten</span></h4>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_View.svg&amp;filetimestamp=20240710144809&amp;.html" class="mw-file-description"><img src="../File/TechDraw_View.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_View.html" title="TechDraw View/de">Neue Ansicht</a>: F&uuml;gt eine Darstellung eines oder mehrerer Objekte hinzu. <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span>: Es k&ouml;nnen eine einzelne Ansicht, eine <a href="../de/TechDraw_ProjectionGroup.html" title="TechDraw ProjectionGroup/de">Ansichtengruppe</a>, eine <a href="../de/TechDraw_SpreadsheetView.html" title="TechDraw SpreadsheetView/de">Tabellenansicht</a>, eine <a href="../de/TechDraw_ArchView.html" title="TechDraw ArchView/de">Arch-Ansicht</a>, ein <a href="../de/TechDraw_Symbol.html" title="TechDraw Symbol/de">Zeichnungselement</a> oder eine <a href="../de/TechDraw_Image.html" title="TechDraw Image/de">Bildansicht</a> erstellt werden.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_BrokenView.svg&amp;filetimestamp=20241021172252&amp;.html" class="mw-file-description"><img src="../File/TechDraw_BrokenView.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_BrokenView.html" title="TechDraw BrokenView/de">Unterbrochene Ansicht einf&uuml;gen</a>: F&uuml;gt eine unterbrochene Ansicht von einem oder mehreren Objekten hinzu. <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span></li></ul>
-<ul><li><span id="TechDraw_SectionGroup"><span typeof="mw:File"><a href="../index.php?title=TechDraw_SectionView.svg&amp;filetimestamp=20241124213855&amp;.html" class="mw-file-description"><img src="../File/TechDraw_SectionView.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_SectionView.html" title="TechDraw SectionView/de">Schnittansicht einf&uuml;gen</a>: F&uuml;gt eine Schnittansicht zu einer vorhandenen Ansicht ein.</span></li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ComplexSection.svg&amp;filetimestamp=20241124220054&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ComplexSection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ComplexSection.html" title="TechDraw ComplexSection/de">Komplexe Schnittansicht einf&uuml;gen</a>: F&uuml;gt eine, auf einer Kontur (Schnittprofil) basierende, Schnittansicht zu einer vorhandenen Ansicht ein. <span style="font-size:small;"><a href="../de/Release_notes_0.21.html" title="Release notes 0.21/de">eingef&uuml;hrt in 0.21</a></span></li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_DetailView.svg&amp;filetimestamp=20241127175336&amp;.html" class="mw-file-description"><img src="../File/TechDraw_DetailView.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_DetailView.html" title="TechDraw DetailView/de">Detailansicht einf&uuml;gen</a>: F&uuml;gt eine Detailansicht eines Bereiches einer vorhandenen Ansicht ein.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_BrokenView.svg&amp;filetimestamp=20241021172252&amp;.html" class="mw-file-description"><img src="../File/TechDraw_BrokenView.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_BrokenView.html" title="TechDraw BrokenView/de">Unterbrochene Ansicht</a>: F&uuml;gt eine unterbrochene Ansicht von einem oder mehreren Objekten hinzu. <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span></li></ul>
+<ul><li><span id="TechDraw_SectionGroup"><span typeof="mw:File"><a href="../index.php?title=TechDraw_SectionView.svg&amp;filetimestamp=20241124213855&amp;.html" class="mw-file-description"><img src="../File/TechDraw_SectionView.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_SectionView.html" title="TechDraw SectionView/de">Schnittansicht</a>: F&uuml;gt eine Schnittansicht zu einer vorhandenen Ansicht ein.</span></li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ComplexSection.svg&amp;filetimestamp=20241124220054&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ComplexSection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ComplexSection.html" title="TechDraw ComplexSection/de">Komplexe Schnittansicht</a>: F&uuml;gt eine, auf einer Kontur (Schnittprofil) basierende, Schnittansicht zu einer vorhandenen Ansicht ein. <span style="font-size:small;"><a href="../de/Release_notes_0.21.html" title="Release notes 0.21/de">eingef&uuml;hrt in 0.21</a></span></li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_DetailView.svg&amp;filetimestamp=20241127175336&amp;.html" class="mw-file-description"><img src="../File/TechDraw_DetailView.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_DetailView.html" title="TechDraw DetailView/de">Detailansicht</a>: F&uuml;gt eine Detailansicht eines Bereiches einer vorhandenen Ansicht ein.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ProjectionGroup.svg&amp;filetimestamp=20240710132852&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ProjectionGroup.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ProjectionGroup.html" title="TechDraw ProjectionGroup/de">Projektionsgruppe einf&uuml;gen</a>: Ruft einen Dialog auf, um mehrere (zusammenh&auml;ngende) Ansichten eines Objekts aus verschiedenen Richtungen zu erstellen (Seitenansicht, Draufsicht usw.). <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span>: Das Werkzeug <a href="../de/TechDraw_View.html" title="TechDraw View/de">Ansicht einf&uuml;gen</a> kann anstatt dieses Werkzeugs verwendet werden.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ClipGroup.svg&amp;filetimestamp=20240708185247&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ClipGroup.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ClipGroup.html" title="TechDraw ClipGroup/de">Ausschnittsgruppe einf&uuml;gen</a>: F&uuml;gt eine Ausschnittsgruppe ein.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_Symbol.svg&amp;filetimestamp=20240710144653&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Symbol.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_Symbol.html" title="TechDraw Symbol/de">SVG-Zeichnungselement</a>: F&uuml;gt ein Symbol aus einer <a href="../de/SVG.html" title="SVG/de">SVG</a>-Datei in ein Zeichnungsblatt ein. <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span>: Das Werkzeug <a href="../de/TechDraw_View.html" title="TechDraw View/de">Neue Ansicht</a> kann anstatt dieses Werkzeugs verwendet werden.</li></ul>
@@ -291,12 +291,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111205721
+Cached time: 20260111210114
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.342 seconds
-Real time usage: 0.545 seconds
+CPU time usage: 0.336 seconds
+Real time usage: 1.380 seconds
 Preprocessor visited node count: 870/1000000
 Post&#8208;expand include size: 27425/2097152 bytes
 Template argument size: 10242/2097152 bytes
@@ -307,18 +307,18 @@ Unstrip post&#8208;expand size: 4462/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   37.476      1 -total
- 37.33%   13.989      1 Template:TechDraw_Tools_navi/de
- 21.49%    8.053      2 Template:Navigation_menu_2
- 16.80%    6.297      5 Template:VersionPlus/de
-  9.65%    3.618      1 Template:Userdocnavi/de
-  9.43%    3.534      2 Template:Docnav/de
-  8.45%    3.166     25 Template:Version/de
-  5.32%    1.994      1 Template:KEY
-  4.99%    1.872      1 Template:TOCright
+100.00%   69.288      1 -total
+ 38.69%   26.806      1 Template:TechDraw_Tools_navi/de
+ 11.64%    8.066      5 Template:VersionPlus/de
+  9.88%    6.847      2 Template:Navigation_menu_2
+  8.67%    6.009     25 Template:Version/de
+  7.87%    5.453      1 Template:KEY
+  7.62%    5.277      1 Template:Userdocnavi/de
+  4.36%    3.023      2 Template:Docnav/de
+  2.01%    1.392      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111205721 and revision id 1736215. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111210113 and revision id 1736278. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
