--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -584,15 +584,10 @@
 </td></tr></tbody></table>
 <p><span id="SolidWorks_navigation"></span>
 </p>
-<h3><span class="mw-headline" id="SolidWorks_navigace">SolidWorks navigace</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
+<h3><span class="mw-headline" id="Navigace_SolidWorks">Navigace SolidWorks</span></h3>
 <p><span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>
+</p><p>Styl navigace SolidWorks byl vytvo&#345;en podle vzoru <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/SolidWorks">SolidWorks</a>.
 </p>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>The SolidWorks navigation style was modeled after <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/SolidWorks">SolidWorks</a>.
-</p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="mousemodel" style="border-style:solid; border-width:1px; border-color:#aaaaaa; padding:1px; border-spacing:18px 0px; width:100%;">
 <tbody><tr>
@@ -882,13 +877,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111210223
+Cached time: 20260111210314
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.326 seconds
-Real time usage: 0.712 seconds
-Preprocessor visited node count: 1484/1000000
+CPU time usage: 0.280 seconds
+Real time usage: 0.402 seconds
+Preprocessor visited node count: 1482/1000000
 Post&#8208;expand include size: 72124/2097152 bytes
 Template argument size: 27059/2097152 bytes
 Highest expansion depth: 7/100
@@ -898,19 +893,19 @@ Unstrip post&#8208;expand size: 3889/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  175.160      1 -total
- 13.12%   22.982      8 Template:ASCII
-  8.60%   15.066      1 Template:OpenCascade_Navigation
-  7.95%   13.924      1 Template:Userdocnavi/cs
-  7.55%   13.227      1 Template:Touchpad_Navigation
-  5.42%    9.486      1 Template:MayaGesture_Navigation
-  5.32%    9.313      2 Template:Version
-  4.44%    7.779      1 Template:Gesture_Navigation
-  4.40%    7.701     69 Template:KEY
-  4.25%    7.448      1 Template:CAD_Navigation
+100.00%   73.036      1 -total
+ 13.01%    9.503      8 Template:ASCII
+  8.67%    6.334      1 Template:Userdocnavi/cs
+  7.67%    5.601     69 Template:KEY
+  7.22%    5.270      1 Template:OpenSCAD_Navigation
+  7.00%    5.110      1 Template:Touchpad_Navigation/cs
+  6.24%    4.557      1 Template:Revit_Navigation
+  4.80%    3.508      1 Template:SiemensNX_Navigation
+  4.47%    3.264      1 Template:Gesture_Navigation
+  4.28%    3.127      1 Template:MayaGesture_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111210223 and revision id 1736306. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111210314 and revision id 1736312. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
