--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -588,19 +588,16 @@
 <p><span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>
 </p><p>Styl navigace SolidWorks byl vytvo&#345;en podle vzoru <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/SolidWorks">SolidWorks</a>.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="mousemodel" style="border-style:solid; border-width:1px; border-color:#aaaaaa; padding:1px; border-spacing:18px 0px; width:100%;">
 <tbody><tr>
-<th style="width:25%; background: #ededff; padding:2px 2px;">Select
+<th style="width:25%; background: #ededff; padding:2px 2px;">V&yacute;b&#283;r
 </th>
 <th colspan="2" style="width:25%; background: #ededff; padding:2px 2px;">Zoom
 </th>
-<th style="width:25%; background: #ededff; padding:2px 2px;">Rotate view
+<th style="width:25%; background: #ededff; padding:2px 2px;">Rotace pohledu
 </th>
-<th style="width:25%; background: #ededff; padding:2px 2px;">Pan
-
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></th></tr>
+<th style="width:25%; background: #ededff; padding:2px 2px;">Posun pohledu
+</th></tr>
 <tr style="text-align:center;">
 <td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Hand_cursor.png&amp;filetimestamp=20240917104542&amp;.html" class="mw-file-description"><img src="../File/Hand_cursor.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="24" data-file-height="24"></a></span>
 </td>
@@ -616,7 +613,6 @@
 <td style="width:12%; border-style:solid; border-width:1px; border-color:#aaaaaa"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB_rotate.svg&amp;filetimestamp=20181210192821&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB_rotate.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
 </td>
 <td style="width:12%; border-style:solid; border-width:1px; border-color:#aaaaaa"><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB_hold.svg&amp;filetimestamp=20181210192909&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
 </div></td>
 <td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB_hold.svg&amp;filetimestamp=20181210192909&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
@@ -646,7 +642,7 @@
 </div></td>
 <td>Hold <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span> and the middle mouse button, then move the pointer.
 </td></tr></tbody></table>
-</div>
+
 <p><span id="TinkerCAD_navigation"></span>
 </p>
 <h3><span class="mw-headline" id="TinkerCAD_navigace">TinkerCAD navigace</span></h3>
@@ -877,15 +873,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111210314
+Cached time: 20260111210415
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.280 seconds
-Real time usage: 0.402 seconds
-Preprocessor visited node count: 1482/1000000
-Post&#8208;expand include size: 72124/2097152 bytes
-Template argument size: 27059/2097152 bytes
+CPU time usage: 0.293 seconds
+Real time usage: 0.464 seconds
+Preprocessor visited node count: 1480/1000000
+Post&#8208;expand include size: 72074/2097152 bytes
+Template argument size: 27009/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -893,19 +889,19 @@ Unstrip post&#8208;expand size: 3889/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   73.036      1 -total
- 13.01%    9.503      8 Template:ASCII
-  8.67%    6.334      1 Template:Userdocnavi/cs
-  7.67%    5.601     69 Template:KEY
-  7.22%    5.270      1 Template:OpenSCAD_Navigation
-  7.00%    5.110      1 Template:Touchpad_Navigation/cs
-  6.24%    4.557      1 Template:Revit_Navigation
-  4.80%    3.508      1 Template:SiemensNX_Navigation
-  4.47%    3.264      1 Template:Gesture_Navigation
-  4.28%    3.127      1 Template:MayaGesture_Navigation
+100.00%   80.868      1 -total
+ 12.78%   10.333      1 Template:Userdocnavi/cs
+ 12.45%   10.071      8 Template:ASCII
+  8.02%    6.488      1 Template:SolidWorks_Navigation
+  5.64%    4.559      1 Template:OpenSCAD_Navigation
+  5.45%    4.404      1 Template:SiemensNX_Navigation
+  5.29%    4.279      1 Template:Touchpad_Navigation/cs
+  5.29%    4.274     69 Template:KEY
+  4.27%    3.455      1 Template:TOCright
+  4.26%    3.445      1 Template:Touchpad_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111210314 and revision id 1736312. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111210415 and revision id 1736316. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
